{
    "name": "MainInputSystem",
    "maps": [
        {
            "name": "PlayerMap",
            "id": "940d66d6-aeaa-4ec1-bc4b-e336ba470cae",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "6ac43aeb-97fe-48a5-9f20-f0136270cf3f",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "DropItem",
                    "type": "Button",
                    "id": "b5f2e22a-b8c0-438c-8955-3279a6fb650c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "41ac93ce-1af1-4869-a77f-c0f6a385d88c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "5934a16d-91d0-48e7-b639-420c61bf2207",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "d3bbf860-7143-4b21-a9a0-3a64d2c356d4",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "9f815336-227c-424e-bf6f-73ebcc701b95",
                    "path": "<Keyboard>/S",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "b7cd2142-d5c1-4bf6-b70f-7233982b41db",
                    "path": "<Keyboard>/A",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "fc959c05-c4e1-4dad-bb28-a4785a595781",
                    "path": "<Keyboard>/D",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Arrows",
                    "id": "aac0286d-bde0-4e3e-867f-8994f71d3b3b",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "f4ddfae2-0db1-437f-8392-b22afd1f9fad",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "f8758a31-e2b2-4033-a7c8-48e04e8fea04",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "e30a14a2-e5e6-407a-a56b-dd7a1f00c18e",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "ab66e6db-abb6-4c71-ac35-2035b64c896f",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "713c1b55-10d8-4100-ae37-cf7302bbe406",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DropItem",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "37e944da-6192-447a-a2c4-7360deec97f7",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "065d3df0-506d-48fa-9e2d-9626c9f575fa",
            "actions": [
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "7ec96807-3902-465d-b429-5384cde2c301",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "3864b490-5fb8-43a6-8ef5-f946f7216587",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "BlockInDialogs",
            "id": "cc46bfdc-4e34-452e-b004-e3129194c53f",
            "actions": [
                {
                    "name": "Open Inventory",
                    "type": "Button",
                    "id": "bd402826-1061-40ff-a3cb-3c448b91e190",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "935cad56-96b3-4d95-b2c6-2f16ec4f2218",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Open Inventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}